[gd_scene load_steps=11 format=3 uid="uid://d1trffgcr05ky"]

[ext_resource type="Script" path="res://scipts/PlayerUIController.gd" id="1_pi1tq"]
[ext_resource type="Texture2D" uid="uid://c7qye8lba2n53" path="res://sprites/running.png" id="2_nbwpr"]
[ext_resource type="Texture2D" uid="uid://dewa5awr3al8w" path="res://sprites/heavyBulletReady.png" id="4_jvto1"]
[ext_resource type="FontFile" uid="uid://cbwpvnddf85ac" path="res://sprites/PublicPixel-z84yD.ttf" id="5_3ly2r"]

[sub_resource type="LabelSettings" id="LabelSettings_pakpx"]
line_spacing = 1.0
font = ExtResource("5_3ly2r")
font_color = Color(0.27451, 0.745098, 1, 1)
outline_size = 3
outline_color = Color(0, 0, 1, 1)

[sub_resource type="Theme" id="Theme_vsi8a"]
/colors/UI_PALE_BLUE = Color(0.27451, 0.745098, 1, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysav3"]
bg_color = Color(0.27451, 0.745098, 1, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_d6voh"]
font = ExtResource("5_3ly2r")

[sub_resource type="LabelSettings" id="LabelSettings_0lubi"]
font = ExtResource("5_3ly2r")

[sub_resource type="LabelSettings" id="LabelSettings_r85pv"]
font = ExtResource("5_3ly2r")
font_size = 26
font_color = Color(0, 1, 1, 1)
outline_size = 5
outline_color = Color(0, 0.113725, 1, 1)

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pi1tq")

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 52.0
offset_right = 183.0
offset_bottom = 100.0
text = "Suit Integrity"
label_settings = SubResource("LabelSettings_pakpx")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 63.0
offset_right = 422.0
offset_bottom = 90.0
theme = SubResource("Theme_vsi8a")
theme_override_styles/fill = SubResource("StyleBoxFlat_ysav3")
step = 1.0
rounded = true
show_percentage = false

[node name="Lbl_Points" type="Label" parent="."]
layout_mode = 0
offset_left = 1158.0
offset_top = 52.0
offset_right = 1228.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 22
text = "0"
label_settings = SubResource("LabelSettings_d6voh")

[node name="Lbl_XP" type="Label" parent="."]
layout_mode = 0
offset_left = 1226.0
offset_top = 53.0
offset_right = 1266.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 22
text = "XP"
label_settings = SubResource("LabelSettings_0lubi")

[node name="DashReloading" type="Sprite2D" parent="."]
modulate = Color(1, 0.164706, 0.196078, 0.537255)
position = Vector2(588, 111)
scale = Vector2(2, 2)
texture = ExtResource("2_nbwpr")

[node name="DashReady" type="Sprite2D" parent="."]
modulate = Color(0.968627, 1, 1, 1)
position = Vector2(588, 111)
scale = Vector2(2, 2)
texture = ExtResource("2_nbwpr")

[node name="HeavyBulletReloading" type="Sprite2D" parent="."]
modulate = Color(0.999799, 0.256112, 0.236864, 1)
position = Vector2(658, 111)
scale = Vector2(6, 6)
texture = ExtResource("4_jvto1")

[node name="HeavyBulletReady" type="Sprite2D" parent="."]
position = Vector2(658, 111)
scale = Vector2(6, 6)
texture = ExtResource("4_jvto1")

[node name="TimeCase" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 458.0
offset_top = -15.0
offset_right = 777.0
offset_bottom = 67.0
color = Color(0.27451, 0.745098, 1, 0.392157)

[node name="AccentBar_B" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 457.0
offset_top = 67.0
offset_right = 778.0
offset_bottom = 79.0
color = Color(0.27451, 0.54902, 1, 1)

[node name="AccentBar_BL" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 444.0
offset_top = 48.0
offset_right = 458.0
offset_bottom = 79.0
color = Color(0.27451, 0.54902, 1, 1)

[node name="AccentBar_BL2" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 777.0
offset_top = 48.0
offset_right = 791.0
offset_bottom = 79.0
color = Color(0.27451, 0.54902, 1, 1)

[node name="AccentBar_R" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 777.0
offset_top = 36.0
offset_right = 1287.0
offset_bottom = 48.0
color = Color(0.27451, 0.54902, 1, 1)

[node name="AccentBar_L" type="ColorRect" parent="."]
layout_mode = 2
offset_left = -6.0
offset_top = 36.0
offset_right = 458.0
offset_bottom = 48.0
color = Color(0.27451, 0.54902, 1, 1)

[node name="MainBar_R" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 777.0
offset_top = -12.0
offset_right = 1344.0
offset_bottom = 36.0
color = Color(0.27451, 0.745098, 1, 0.392157)

[node name="MainBar_L" type="ColorRect" parent="."]
layout_mode = 2
offset_left = -3.0
offset_right = 458.0
offset_bottom = 36.0
color = Color(0.27451, 0.745098, 1, 0.392157)

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 558.0
offset_top = 17.0
offset_right = 688.0
offset_bottom = 46.0
text = "00:00
"
label_settings = SubResource("LabelSettings_r85pv")
